--- a/src/app/auth-admin/login-admin/login-admin.component.html
+++ b/src/app/auth-admin/login-admin/login-admin.component.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Login</title>
-</head>
-
-<body>
+<div class="container-body">
     <div class="login-container">
         <div class="login-info-container">
             <h1 class="title">Hola! Bienvenido nuevamente</h1>
@@ -21,7 +10,7 @@
                 <div class="social-login-element">
                     <img src="https://w7.pngwing.com/pngs/869/485/png-transparent-google-logo-computer-icons-google-text-logo-google-logo.png"
                         alt="google-image">
-                    <span>Google</span>
+                    <span (click)="loginWithGoogle()">Google</span>
                 </div>
             </div>
             <form class="inputs-container">
@@ -34,6 +23,4 @@
             src="https://webadminportal.ucv.edu.pe/uploads/images/home/programas-academicos/pregrado.webp" alt="">
     </div>
 
-</body>
-
-</html>
+</div>
